* Some more signals in the glade file * File->Quit now works

--- a/src/resources/glade/editor.glade
+++ b/src/resources/glade/editor.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Aug 31 21:37:20 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Aug 31 21:50:22 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="default_width">500</property>
@@ -63,6 +63,7 @@
                         <property name="label" translatable="yes">gtk-quit</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_FileQuitMenuItem_activate"/>
                       </widget>
                     </child>
                   </widget>
