* Added signals for the File menu

--- a/src/resources/glade/editor.glade
+++ b/src/resources/glade/editor.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sun Aug 31 21:50:22 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Aug 31 23:18:30 2008 -->
 <glade-interface>
   <widget class="GtkWindow" id="MainWindow">
     <property name="default_width">500</property>
@@ -26,6 +26,7 @@
                         <property name="label" translatable="yes">gtk-new</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_FileNewMenuItem_activate"/>
                       </widget>
                     </child>
                     <child>
@@ -34,6 +35,7 @@
                         <property name="label" translatable="yes">gtk-open</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_FileOpenMenuItem_activate"/>
                       </widget>
                     </child>
                     <child>
@@ -50,6 +52,7 @@
                         <property name="label" translatable="yes">gtk-save-as</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="on_FileSaveAsMenuItem_activate"/>
                       </widget>
                     </child>
                     <child>
